--- a/assets/scss/components/_dashboard.scss
+++ b/assets/scss/components/_dashboard.scss
@@ -3,7 +3,7 @@
   margin-bottom: 1.5em;
   width: 100%;
   vertical-align: top;
-  padding: 1em 1.5em 1em;
+  padding: 1em 1.5em;
 }
 .dashboard-section:last-child {
   margin-bottom: 0;
