--- a/assets/scss/components/_breadcrumb.scss
+++ b/assets/scss/components/_breadcrumb.scss
@@ -11,14 +11,24 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  right: 0;
   content: "";
   width: 2em;
   pointer-events: none;
-  background: -webkit-linear-gradient(left, rgba(0,0,0,0), #000);
-  background: -moz-linear-gradient(left, rgba(0,0,0,0), #000);
-  background: -ms-linear-gradient(left, rgba(0,0,0,0), #000);
-  background: linear-gradient(left, rgba(0,0,0,0), #000);
+
+  body.ltr & {
+    right: 0;
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0), #000);
+    background: -moz-linear-gradient(left, rgba(0,0,0,0), #000);
+    background: -ms-linear-gradient(left, rgba(0,0,0,0), #000);
+    background: linear-gradient(left, rgba(0,0,0,0), #000);
+  }
+  body.rtl & {
+    left: 0;
+    background: -webkit-linear-gradient(right, rgba(0,0,0,0), #000);
+    background: -moz-linear-gradient(right, rgba(0,0,0,0), #000);
+    background: -ms-linear-gradient(right, rgba(0,0,0,0), #000);
+    background: linear-gradient(right, rgba(0,0,0,0), #000);
+  }
 }
 .breadcrumb-list li:last-child .breadcrumb-label {
   max-width: none;
@@ -26,16 +36,28 @@
 .breadcrumb-link {
   position: relative;
   line-height: 1em;
-  padding-left: 1.25em;
   color: #fff;
   font-weight: 400;
+
+  body.ltr & {
+    padding-left: 1.25em;
+  }
+  body.rtl & {
+    padding-right: 1.25em;
+  }
 }
 .breadcrumb-label {
   display: block;
   white-space: nowrap;
   overflow: hidden;
   max-width: 6em;
-  padding: 1em .75em 1em 0;
+
+  body.ltr & {
+    padding: 1em .75em 1em 0;
+  }
+  body.rtl & {
+    padding: 1em 0 1em .75em;
+  }
 }
 
 @media screen and (min-width: 50em) {
@@ -62,13 +84,23 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  right: 0;
   content: "";
   width: .75em;
-  background: -webkit-linear-gradient(left, rgba(0,0,0,0), #000);
-  background: -moz-linear-gradient(left, rgba(0,0,0,0), #000);
-  background: -ms-linear-gradient(left, rgba(0,0,0,0), #000);
-  background: linear-gradient(left, rgba(0,0,0,0), #000);
+
+  body.ltr & {
+    right: 0;
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0), #000);
+    background: -moz-linear-gradient(left, rgba(0,0,0,0), #000);
+    background: -ms-linear-gradient(left, rgba(0,0,0,0), #000);
+    background: linear-gradient(left, rgba(0,0,0,0), #000);
+  }
+  body.rtl & {
+    left: 0;
+    background: -webkit-linear-gradient(right, rgba(0,0,0,0), #000);
+    background: -moz-linear-gradient(right, rgba(0,0,0,0), #000);
+    background: -ms-linear-gradient(right, rgba(0,0,0,0), #000);
+    background: linear-gradient(right, rgba(0,0,0,0), #000);
+  }
 }
 .breadcrumb-link:hover {
   color: #999;
@@ -77,11 +109,16 @@
 .breadcrumb-link:before {
   position: absolute;
   content: "";
-  right: 0;
   height: 1.6em;
   width: 1px;
   background: #555;
   z-index: 1;
+  body.ltr & {
+    right: 0;
+  }
+  body.rtl & {
+    left: 0;
+  }
 }
 .breadcrumb-link:after {
   top: 0;
@@ -89,10 +126,19 @@
   background: -moz-linear-gradient(bottom, #555, #555 50%, #000);
   background: -ms-linear-gradient(bottom, #555, #555 50%, #000);
   background: linear-gradient(bottom, #555, #555 50%, #000);
-  -webkit-transform: rotate(-33.75deg);
-  -moz-transform: rotate(-33.75deg);
-  -ms-transform: rotate(-33.75deg);
-  transform: rotate(-33.75deg);
+
+  body.ltr & {
+    -webkit-transform: rotate(-33.75deg);
+    -moz-transform: rotate(-33.75deg);
+    -ms-transform: rotate(-33.75deg);
+    transform: rotate(-33.75deg);
+  }
+  body.rtl & {
+    -webkit-transform: rotate(33.75deg);
+    -moz-transform: rotate(33.75deg);
+    -ms-transform: rotate(33.75deg);
+    transform: rotate(33.75deg);
+  }
 }
 .breadcrumb-link:before {
   bottom: 0;
@@ -100,8 +146,17 @@
   background: -moz-linear-gradient(top, #555, #555 50%, #000);
   background: -ms-linear-gradient(top, #555, #555 50%, #000);
   background: linear-gradient(top, #555, #555 50%, #000);
-  -webkit-transform: rotate(33.75deg);
-  -moz-transform: rotate(33.75deg);
-  -ms-transform: rotate(33.75deg);
-  transform: rotate(33.75deg);
+
+  body.ltr & {
+    -webkit-transform: rotate(33.75deg);
+    -moz-transform: rotate(33.75deg);
+    -ms-transform: rotate(33.75deg);
+    transform: rotate(33.75deg);
+  }
+  body.rtl & {
+    -webkit-transform: rotate(-33.75deg);
+    -moz-transform: rotate(-33.75deg);
+    -ms-transform: rotate(-33.75deg);
+    transform: rotate(-33.75deg);
+  }
 }
