--- a/assets/scss/components/_grid.scss
+++ b/assets/scss/components/_grid.scss
@@ -1,15 +1,35 @@
 .grid {
-  margin-left: -1.5em;
+  body.ltr & {
+    margin-left: -1.5em;
+  }
+  body.rtl & {
+    margin-right: -1.5em;
+  }
 }
 .grid-item {
   display: inline-block;
   vertical-align: top;
   width: 100%;
-  padding-left: 1.5em;
+  body.ltr & {
+    padding-left: 1.5em;
+  }
+  body.rtl & {
+    padding-right: 1.5em;
+  }
 }
 .grid-full {
-  margin-left: 0;
+  body.ltr & {
+    margin-left: 0;
+  }
+  body.rtl & {
+    margin-right: 0;
+  }
 }
 .grid-full .grid-item {
-  padding-left: 0;
+  body.ltr & {
+    padding-left: 0;
+  }
+  body.rtl & {
+    padding-right: 0;
+  }
 }
