--- a/assets/scss/components/_languages.scss
+++ b/assets/scss/components/_languages.scss
@@ -1,13 +1,19 @@
 .languages {
   position: absolute;
   top: 0;
-  right: 4em;
   width: 4.5em;
   bottom: 0;
-  border-left: 1px solid #555;
   text-align: center;
   background: #000;
   z-index: 100;
+  body.ltr & {
+    right: 4em;
+    border-left: 1px solid #555;
+  }
+  body.rtl & {
+    left: 4em;
+    border-right: 1px solid #555;
+  }
 }
 .languages-toggle {
   display: block;
@@ -17,21 +23,37 @@
 }
 .languages-toggle span {
   position: relative;
-  padding-right: 1.25em;
+  body.ltr & {
+    padding-right: 1.25em;
+  }
+  body.rtl & {
+    padding-left: 1.25em;
+  }
 }
 .languages-toggle span:after {
   position: absolute;
   top: 50%;
-  right: 0;
   content: "";
   border-top: .3em solid #fff;
   border-left: .3em solid transparent;
   border-right: .3em solid transparent;
+  body.ltr & {
+    right: 0;
+  }
+  body.rtl & {
+    left: 0;
+  }
 }
 .languages .dropdown {
   width: 100%;
 }
 .languages .dropdown:after {
-  left: 50%;
-  margin-left: -.5em;
+  body.ltr & {
+    left: 50%;
+    margin-left: -.5em;
+  }
+  body.rtl & {
+    right: 50%;
+    margin-right: -.5em;
+  }
 }
