--- a/assets/scss/components/_main.scss
+++ b/assets/scss/components/_main.scss
@@ -8,18 +8,24 @@
   position: fixed;
   content: "";
   top: 50%;
-  left: 50%;
   width: 3em;
   height: 3em;
   margin-top: -1.5em;
-  margin-left: -1.5em;
   background: #fff url(../images/loader.black.gif) no-repeat center center;
   border-radius: 50%;
   z-index: 10000000;
+  body.ltr & {
+    left: 50%;
+    margin-left: -1.5em;
+  }
+  body.rtl & {
+    right: 50%;
+    margin-right: -1.5em;
+  }
 }
 @media screen and (min-width: 50em) {
   .mainbar .form {
-    padding: 0 1.5em 6em 1.5em;
+    padding: 0 1.5em 6em;
   }
 }
 .mainbar .form .message {
