--- a/assets/scss/components/_message.scss
+++ b/assets/scss/components/_message.scss
@@ -16,14 +16,18 @@
 }
 .message-content {
   display: block;
-  padding: .75em 4.5em .75em 1.5em;
   line-height: 1.5em;
   background: #000;
+  body.ltr & {
+    padding: .75em 4.5em .75em 1.5em;
+  }
+  body.rtl & {
+    padding: .75em 1.5em .75em 4.5em;
+  }
 }
 .message-toggle {
   position: absolute;
   top: 50%;
-  right: 1.5em;
   margin-top: -.7em;
   border: 2px solid rgba(255,255,255, .5);
   border-radius: 4em;
@@ -31,6 +35,12 @@
   height: 1.5em;
   transition: border-color .3s;
   cursor: pointer;
+  body.ltr & {
+    right: 1.5em;
+  }
+  body.rtl & {
+    left: 1.5em;
+  }
 }
 .message-toggle:hover {
   border-color: #fff;
@@ -49,28 +59,52 @@
 body > .message {
   position: absolute;
   top: 0;
-  right: 0;
   height: 3em;
-  left: 4em;
-  margin-left: -1px;
   z-index: 1;
   background: #000;
+  body.ltr & {
+    right: 0;
+    left: 4em;
+    margin-left: -1px;
+  }
+  body.rtl & {
+    left: 0;
+    right: 4em;
+    margin-right: -1px;
+  }
 }
 body > .message .message-content {
   position: relative;
-  margin-right: 4.5em;
-  padding-right: 1.5em;
+  body.ltr & {
+    margin-right: 4.5em;
+    padding-right: 1.5em;
+  }
+  body.rtl & {
+    margin-left: 4.5em;
+    padding-left: 1.5em;
+  }
 }
 body > .message .message-content:after {
   position: absolute;
   content: "";
   top: 50%;
   margin-top: -.5em;
-  right: -.5em;
-  border-left: .5em solid #8dae28;
   border-top: .5em solid transparent;
   border-bottom: .5em solid transparent;
+  body.ltr & {
+    right: -.5em;
+    border-left: .5em solid #8dae28;
+  }
+  body.rtl & {
+    left: -.5em;
+    border-right: .5em solid #8dae28;
+  }
 }
 body > .message-is-alert .message-content:after {
-  border-left: .5em solid #b3000a;
+  body.ltr & {
+    border-left: .5em solid #b3000a;
+  }
+  body.rtl & {
+    border-right: .5em solid #b3000a;
+  }
 }
