--- a/assets/scss/components/_nav.scss
+++ b/assets/scss/components/_nav.scss
@@ -5,7 +5,12 @@
   display: block;
 }
 .nav-bar > li {
-  float: left;
+  body.ltr & {
+    float: left;
+  }
+  body.rtl & {
+    float: right;
+  }
 }
 .nav-icon {
   display: inline-block;
@@ -21,8 +26,18 @@
   color: #999;
 }
 .nav-icon-left {
-  border-right: 1px solid #555;
+  body.ltr & {
+    border-right: 1px solid #555;
+  }
+  body.rtl & {
+    border-left: 1px solid #555;
+  }
 }
 .nav-icon-right {
-  border-left: 1px solid #555;
+  body.ltr & {
+    border-left: 1px solid #555;
+  }
+  body.rtl & {
+    border-right: 1px solid #555;
+  }
 }
