--- a/assets/scss/components/_search.scss
+++ b/assets/scss/components/_search.scss
@@ -7,8 +7,13 @@
 .search-field .icon {
   position: absolute;
   top: .4em;
-  left: 0;
   z-index: 1;
+  body.ltr & {
+    left: 0;
+  }
+  body.rtl & {
+    right: 0;
+  }
 }
 .search-input {
   background: #efefef;
@@ -25,7 +30,6 @@
 }
 .search-input {
   position: relative;
-  padding: 0 0 .5em 2em;
   font-weight: 600;
   line-height: 1.5em;
   border: 0;
@@ -35,6 +39,12 @@
   -moz-appearance: none;
   -ms-appearance: none;
   appearance: none;
+  body.ltr & {
+    padding: 0 0 .5em 2em;
+  }
+  body.rtl & {
+    padding: 0 2em .5em 0;
+  }
 }
 .search-dropdown {
   padding-bottom: 3em;
@@ -46,7 +56,6 @@
   appearance: none;
   display: block;
   width: 100%;
-  text-align: left;
   border: 0;
   padding: 1em 2em;
   line-height: 1em;
@@ -56,6 +65,12 @@
   text-overflow: ellipsis;
   overflow: hidden;
   background: #fff;
+  body.ltr & {
+    text-align: left;
+  }
+  body.rtl & {
+    text-align: right;
+  }
 }
 .search-dropdown button:focus {
   outline: 0;
@@ -69,18 +84,29 @@
 .search-close {
   position: absolute;
   top: 0;
-  right: 0;
-  border-left: 1px solid #555;
   width: 4em;
   color: #fff;
   text-align: center;
   background: #000;
+  body.ltr & {
+    right: 0;
+    border-left: 1px solid #555;
+  }
+  body.rtl & {
+    left: 0;
+    border-right: 1px solid #555;
+  }
 }
 .search-help {
   position: relative;
   font-style: italic;
   max-width: 30em;
-  padding-left: 4.5em;
+  body.ltr & {
+    padding-left: 4.5em;
+  }
+  body.rtl & {
+    padding-right: 4.5em;
+  }
 }
 .search-help:after {
   position: absolute;
@@ -88,6 +114,12 @@
   top: -1.5em;
   height: 6em;
   width: 3em;
-  left: 1.5em;
-  background: url(../images/hint.arrows.png) no-repeat top left;
+  body.ltr & {
+    left: 1.5em;
+    background: url(../images/hint.arrows.png) no-repeat top left;
+  }
+  body.rtl & {
+    right: 1.5em;
+    background: url(../images/hint.arrows.png) no-repeat top right;
+  }
 }
