Adapting panel to follow permissions
Changes adapt the panel, so that the API and views display and interact accordingly to the user role's granted global permissions as well as the perimissions granted in the respective blueprint.

--- a/assets/scss/components/_btn.scss
+++ b/assets/scss/components/_btn.scss
@@ -60,3 +60,11 @@
 .btn-with-icon .icon {
   color: #000;
 }
+.btn-disabled,
+.btn-disabled .icon {
+  color: #ddd;
+  cursor: default;
+}
+.btn-disabled:hover {
+  color: #ddd;
+}
