--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -289,6 +289,9 @@ textarea.over {
   background: #efefef;
   border-color: #ddd;
   color: #777;
+}
+.input-is-readonly[type=checkbox],
+.input-is-readonly[type=radio] {
   pointer-events: none;
 }
 .input-is-readonly:focus,
