Adds template name as page info to sidebar

--- a/assets/scss/components/_sidebar.scss
+++ b/assets/scss/components/_sidebar.scss
@@ -109,7 +109,7 @@
   white-space: nowrap;
   overflow: hidden;
 }
-.sidebar-list > li > a {
+.sidebar-list > li {
   body.ltr & {
     padding: .25em 0 .25em 1.75em;
   }
