--- a/assets/scss/components/_main.scss
+++ b/assets/scss/components/_main.scss
@@ -34,7 +34,11 @@
     bottom: 0;
     left: 33.33%;
     right: 0;
+    background: #efefef;
+    background: -webkit-linear-gradient(bottom, rgba(#efefef, 1), rgba(#efefef, .8) 75%, rgba(#efefef, 0));
     background: -moz-linear-gradient(bottom, rgba(#efefef, 1), rgba(#efefef, .8) 75%, rgba(#efefef, 0));
+    background: -ms-linear-gradient(bottom, rgba(#efefef, 1), rgba(#efefef, .8) 75%, rgba(#efefef, 0));
+    background: linear-gradient(bottom, rgba(#efefef, 1), rgba(#efefef, .8) 75%, rgba(#efefef, 0));
     margin: 0;
     padding: 1.5em 3em 1.5em;
   }
