--- a/assets/scss/panel.scss
+++ b/assets/scss/panel.scss
@@ -9,6 +9,7 @@
 @import "components/nav";
 @import "components/btn";
 @import "components/form";
+@import "components/dragula";
 @import "components/dropzone";
 @import "components/dropload";
 @import "components/message";
