--- a/assets/scss/panel.scss
+++ b/assets/scss/panel.scss
@@ -37,6 +37,7 @@
 @import "components/main";
 @import "components/autocomplete";
 @import "components/fontawesome";
+@import "components/pikaday";
 
 
 body.loading:before {
