word-break: break-all;
Prevent long filenames flowing out of the box in the delete modal.

--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -288,6 +288,7 @@ fieldset {
   -ms-appearance: none;
   appearance: none;
   border-radius: 0;
+  word-break: break-all;
 }
 .input:focus {
   outline: 0;
