--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -291,6 +291,7 @@ fieldset {
   -ms-appearance: none;
   appearance: none;
   border-radius: 0;
+  word-break: break-all;
 }
 .input:focus {
   outline: 0;
