--- a/assets/scss/components/_search.scss
+++ b/assets/scss/components/_search.scss
@@ -27,6 +27,7 @@
   display: block;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .search-section li.active a {
   color: #8dae28;
