--- a/assets/scss/panel.scss
+++ b/assets/scss/panel.scss
@@ -38,6 +38,7 @@
 @import "components/autocomplete";
 @import "components/fontawesome";
 @import "components/pikaday";
+@import "components/counter";
 
 
 body.loading:before {
