--- a/assets/scss/components/_modal.scss
+++ b/assets/scss/components/_modal.scss
@@ -54,6 +54,10 @@
     width: 90%;
     max-width: 40em;
   }
+  .modal-content-medium {
+    width: 70%;
+    max-width: 30em;
+  }
   .modal-content-fixed {
     -webkit-transform: translate(-50%, 0);
     -moz-transform: translate(-50%, 0);
