--- a/assets/scss/components/_sidebar.scss
+++ b/assets/scss/components/_sidebar.scss
@@ -63,7 +63,8 @@
     bottom: 0;
     height: 100%;
     padding: 0;
-    overflow: auto;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     body.ltr & {
       left: 0;
     }
@@ -82,7 +83,8 @@
     top: 0;
     bottom: 0;
     width: 66.66%;
-    overflow: auto;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     body.ltr & {
       right: 0;
     }
