--- a/assets/scss/panel.scss
+++ b/assets/scss/panel.scss
@@ -39,28 +39,6 @@
 @import "components/fontawesome";
 @import "components/pikaday";
 @import "components/counter";
+@import "components/body";
 
 
-body.loading:before {
-  position: fixed;
-  content: "";
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(30,30,30, .8);
-  z-index: 10000000;
-}
-body.loading:after {
-  position: fixed;
-  content: "";
-  top: 50%;
-  left: 50%;
-  width: 2em;
-  height: 2em;
-  margin-left: -1em;
-  margin-top: -1em;
-  border-radius: 50%; 
-  background: #fff url(../images/loader.black.gif) no-repeat center center;
-  z-index: 10000000;
-}
