--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -96,8 +96,9 @@
   width: 3rem;
   text-align: center;
 }
-.structure-table-options a {
+.structure-table .structure-table-options a {
   text-align: center;
+  cursor: pointer;
 }
 
 .structure-sortable-helper {
